--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,7 @@ words_per_minute: 200
 excerpt_separator: <!--more-->
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url: http://ObjectAlchemist.github.io
-baseurl:           /
+url:               http://objectalchemist.github.io
 
 # draw your top menu here
 # each item must have a title and a url.
