Remove https until solved

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ menu:
 # Owner/author information
 owner:
   name:           Karsten Litsche
-  site:           https://blog.objectalchemist.com
+  site:           http://blog.objectalchemist.com
   avatar:         images/avatar.jpg
   bio:            "Develop mobile solutions for more than 12 years now<br>in startups, mid sized companies up to well known<br>mammoth like Nokia, Yahoo and EPost.<br>Likes to discuss object oriented ideas, greek food and a good wine."
   email:          feedback@objectalchemist.com
